added routes, controllers for users and basketball. created authentication for them. creaated authentication of logged in and admin.
