# swagger_output.json
@@ -5,7 +5,7 @@
     "description": "API for managing sports data",
     "version": "1.0.0"
   },
-  "host": "sports-api-soiq.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "tags": [
     {
@@ -15,12 +15,56 @@
     {
       "name": "Soccer",
       "description": "Operations related to soccer teams"
+    },
+    {
+      "name": "Basketball",
+      "description": "Operations related to basketball teams"
+    },
+    {
+      "name": "User",
+      "description": "Operations related to user management"
+    },
+    {
+      "name": "Authentication",
+      "description": "Operations related to user authentication"
     }
   ],
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
+    "/login": {
+      "get": {
+        "tags": [
+          "Authentication"
+        ],
+        "description": "Login with GitHub",
+        "responses": {
+          "200": {
+            "description": "You are logged in."
+          },
+          "404": {
+            "description": "You are not Logged in."
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "tags": [
+          "Authentication"
+        ],
+        "description": "Logging out from GitHub",
+        "responses": {
+          "200": {
+            "description": "You are logged out."
+          },
+          "404": {
+            "description": "You are not Logged out."
+          }
+        }
+      }
+    },
     "/volleyball/": {
       "get": {
         "tags": [
@@ -100,6 +144,12 @@
           },
           "400": {
             "description": "Invalid team data."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "412": {
             "description": "Precondition Failed"
@@ -209,6 +259,12 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
           "404": {
             "description": "Team not found."
           },
@@ -240,6 +296,12 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Team not found."
@@ -330,8 +392,17 @@
           "400": {
             "description": "Invalid team data."
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
           "412": {
             "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -432,11 +503,20 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
           "404": {
             "description": "Team not found."
           },
           "412": {
             "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -461,8 +541,478 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
           "404": {
             "description": "Team not found."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/basketball/": {
+      "get": {
+        "tags": [
+          "Basketball"
+        ],
+        "description": "Retrieve all Basketball teams",
+        "responses": {
+          "200": {
+            "description": "A list of Basketball teams."
+          },
+          "400": {
+            "description": "Internal server error."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Basketball"
+        ],
+        "description": "Create a new Basketball team",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Basketball team data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Team Name"
+                },
+                "record": {
+                  "type": "string",
+                  "example": "30-2-3"
+                },
+                "location": {
+                  "type": "string",
+                  "example": "New City, State"
+                },
+                "players": {
+                  "type": "number",
+                  "example": 23
+                },
+                "colors": {
+                  "type": "string",
+                  "example": "Blue, Black"
+                },
+                "headCoach": {
+                  "type": "string",
+                  "example": "New Coach Name"
+                },
+                "streak": {
+                  "type": "number",
+                  "example": 2
+                }
+              },
+              "required": [
+                "name",
+                "record",
+                "location",
+                "players",
+                "colors",
+                "headCoach",
+                "streak"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Team created successfully."
+          },
+          "400": {
+            "description": "Invalid team data."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/basketball/{id}": {
+      "get": {
+        "tags": [
+          "Basketball"
+        ],
+        "description": "Retrieve a Basketball team by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of the Basketball team"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Basketball team found."
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Team not found."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Basketball"
+        ],
+        "description": "Update an existing Basketball team",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of the Basketball team"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Updated Basketball team data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Updated Team Name"
+                },
+                "record": {
+                  "type": "string",
+                  "example": "30-2-3"
+                },
+                "location": {
+                  "type": "string",
+                  "example": "New City, State"
+                },
+                "players": {
+                  "type": "number",
+                  "example": 23
+                },
+                "colors": {
+                  "type": "string",
+                  "example": "Blue, Black"
+                },
+                "headCoach": {
+                  "type": "string",
+                  "example": "New Coach Name"
+                },
+                "streak": {
+                  "type": "number",
+                  "example": 2
+                }
+              },
+              "required": [
+                "name",
+                "record",
+                "location",
+                "players",
+                "colors",
+                "headCoach",
+                "streak"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Team updated successfully."
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Team not found."
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Basketball"
+        ],
+        "description": "Delete a Basketball team",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of the Basketball team to delete"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Team deleted successfully."
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Team not found."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/user/": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "description": "Retrieve all users",
+        "responses": {
+          "200": {
+            "description": "A list of users."
+          },
+          "400": {
+            "description": "Internal server error."
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "Create a new user",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "user data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "John"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Doe"
+                },
+                "position": {
+                  "type": "string",
+                  "example": "Admin"
+                },
+                "username": {
+                  "type": "string",
+                  "example": "johndoe"
+                }
+              },
+              "required": [
+                "firstName",
+                "lastName",
+                "position",
+                "username"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "201": {
+            "description": "User created successfully."
+          },
+          "400": {
+            "description": "Invalid user data."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/user/{id}": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "description": "Retrieve a user by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of the user"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User found."
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "User not found."
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "User"
+        ],
+        "description": "Update an existing user",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of the user"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Updated user team data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "John"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Doe"
+                },
+                "position": {
+                  "type": "string",
+                  "example": "Admin"
+                },
+                "username": {
+                  "type": "string",
+                  "example": "johndoe"
+                }
+              },
+              "required": [
+                "firstName",
+                "lastName",
+                "position",
+                "username"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User updated successfully."
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "User not found."
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "User"
+        ],
+        "description": "Delete a user",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of the user to delete"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User deleted successfully."
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "User not found."
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
